Sat Apr  6 02:42:43 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSUser.m (NSSearchPathForDirectoriesInDomains): Fixed
	typo, gnustep_local_root being used instead of gnustep_user_root
	for developer dirs in user root.
	
2002-04-05  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSObject.m: Fix locking bug with NSZombie ... was not
	locking when adding/removing zombies.
	* Source/NSString.m: Fix property list parsing code to raise
	exceptions on failure rather than logging messages.  Also check for
	extra data at end of parsed string.
	* Tools/ctvenc.m: new tool for converting string encodings.

2002-03-28  Manuel Guesdon <mguesdon@orange-concept.com>

	* Tools/gsdoc.m: corrected inversed test for missing entities
	
2002-03-27  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSPrivate.h: Added function to fetch boolean value from env
	* Source/NSException.m: Use new function.
	* Source/NSProcesInfo.m: Implement new function.
	* Source/NSObject.m: Implement NSZombie functionality.
	* Headers/Foundation/NSDebug.h: Document NSZombie functionality.

2002-03-25  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSTask.m: Implement code to watch for child process exit
	under mingw and rewrite various methods to handle process
	termination nicely under windoze.
	* Source/NSException.m: flush stderr ... under windoze stderr is
	not automatically flushed!
	* Source/GSWindowsFileHandle.m: watch for exceptional conditions
	so we can handle socket connection failures in mingw32.
	Added code to try to cope with standard files properly, not just
	network sockets.
	* Source/GSTcpPort.m: ditto.
	* Source/Unicode.m: GSToUnicode(), GSFromUnicode(), if terminate
	option is specified, always produce output with a nul terminator
	even for input of an empty string.

2002-03-22  Richard Frith-Macdonald <rfm@gnu.org>

	* SSL/GNUmakefile: Remove -lobjc and -lgnustep-base from bundle
	libraries ... it should not need them.

2002-03-21  Richard Frith-Macdonald <rfm@gnu.org>
